adds tasks add
